force-app/main/default/objects/Payment_Plan__c/fields/Applicable_Project_Types__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Project_Types__c</fullName>
    <label>Applicable Project Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Residential</fullName><default>false</default><label>Residential</label></value>
            <value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>