force-app/main/default/objects/Payment_Plan__c/fields/Milestone_Count__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Count__c</fullName>
    <label>Milestone Count</label>
    <summaryForeignKey>Payment_Plan_Milestone__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>