force-app/main/default/objects/Payment_Plan__c/fields/Total_Pct_Check__c.field-meta.xml
<CustomField>
    <fullName>Total_Pct_Check__c</fullName>
    <label>Total Percentage Check</label>
    <summarizedField>Payment_Plan_Milestone__c.Percentage__c</summarizedField>
    <summaryForeignKey>Payment_Plan_Milestone__c.Payment_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>